@@ -2,6 +2,7 @@ nanoflann 1.1.9: Under development
   * Added KDTreeSingleIndexAdaptor::radiusSearchCustomCallback() (Based on a suggestion by Yannick Morin-Rivest)
   * Better documentation in class headers.
   * Cleanup of unused code.
+  * Parameter KDTreeSingleIndexAdaptorParams::dim has been removed since it was redundant.
 
 nanoflann 1.1.8: Released May 2, 2014
   * Created hidden constructors in nanoflann class, to disallow unintentional copies which will corrupt 
